--- a/pages/hvac.html
+++ b/pages/hvac.html
@@ -6,19 +6,22 @@
 	<title>HVAC Game</title>
 	<link rel='stylesheet' href='/css/main.css'	/>
 	
-	<!-- load scripts -->
-	<!--<script src='http://code.jquery.com/jquery-1.9.1.js'></script>
-		
-		<script src='scripts/functions.js'></script>
-	-->
+	<!-- load libraries -->
 	<script src="/libs/jquery.js"></script>
 	<script src="/libs/kinetic.js"></script>
 	<script src="/libs/underscore.js"></script>
 	<script src="/libs/backbone.js"></script>
+	<script src='/js/main.js'></script>
+	<script src="/js/models/chaptermodel.js"></script>
+	<script src="/js/models/classmodel.js"></script>
+	<script src="/js/collections/chaptercollection.js"></script>
+	<script src="/js/views/chapterlistview.js"></script>
+	<script src="/js/views/chapterview.js"></script>
+
 	<script src='/js/objects.js'></script>
 	<script src='/js/variables.js'></script>
 
-	<script src='/js/main.js'></script>
+	
 	<script src='/js/routers/router.js'></script>
 
 </head>
