added class title view and user view

--- a/pages/hvac.html
+++ b/pages/hvac.html
@@ -14,9 +14,12 @@
 	<script src='/js/main.js'></script>
 	<script src="/js/models/chaptermodel.js"></script>
 	<script src="/js/models/classmodel.js"></script>
+	<script src="/js/models/usermodel.js"></script>
 	<script src="/js/collections/chaptercollection.js"></script>
 	<script src="/js/views/chapterlistview.js"></script>
 	<script src="/js/views/chapterview.js"></script>
+	<script src="/js/views/usercardview.js"></script>
+	<script src="/js/views/classview.js"></script>
 
 	<script src='/js/objects.js'></script>
 	<script src='/js/variables.js'></script>
