added css stlyes to chapter views

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
 		<div id='header_wrapper'>
 			<div class='fleft'>
-				<h1>HVAC TRAINER</h1>
+				<h1>TRADE TRAINER</h1>
 				<h2>Learn to diagnose electrical circuits online.<!--It's simple, it's fun, and it's free.--></h2>
 			</div>
-			<a href='/classroom/#chapterview' id='signup_button'>Sign Up!</a>
+			<a href='/classroom/#HVAC' id='signup_button'>Sign Up!</a>
 		</div>
 	</div>
 	<div id='wrapper'>
