--- a/pages/hvac.html
+++ b/pages/hvac.html
@@ -29,12 +29,14 @@
 
 </head>
 <body>
-	<div id='header'>
+	<div id='header2'>
 
 		<div id='header_wrapper'>
 			<div class='fleft'>
-				<h1>HVAC TRAINER</h1>
+				<h1>TRADE TRAINER</h1>
+
 			</div>
+			<span class='fright'>LogOut</span>
 		</div>
 	</div>
 	<div id='wrapper'>
