flushed out backbone router

--- a/pages/hvac.html
+++ b/pages/hvac.html
@@ -15,11 +15,15 @@
 	<script src="/js/models/chaptermodel.js"></script>
 	<script src="/js/models/classmodel.js"></script>
 	<script src="/js/models/usermodel.js"></script>
+	<script src="/js/models/lessonmodel.js"></script>
 	<script src="/js/collections/chaptercollection.js"></script>
+	<script src="/js/collections/lessoncollection.js"></script>
 	<script src="/js/views/chapterlistview.js"></script>
 	<script src="/js/views/chapterview.js"></script>
 	<script src="/js/views/usercardview.js"></script>
 	<script src="/js/views/classview.js"></script>
+	<script src="/js/views/lessonlistview.js"></script>
+	<script src="/js/views/lessonview.js"></script>
 
 	<script src='/js/objects.js'></script>
 	<script src='/js/variables.js'></script>
