--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 			HVAC.Neutral('n1', 625, 40);
 			//HVAC.Contact('c3', 100, 100);
 			//HVAC.Contact('c4', 100, 200);
-			HVAC.Heater('heat1', 'h1', 'h2', 350, 300);
-			HVAC.Heater('heat2', 'h1', 'h2', 350, 100);
+			//HVAC.Heater('heat1', 'h1', 'h2', 350, 300);
+			//HVAC.Heater('heat2', 'h1', 'h2', 350, 100);
 			//HVAC.Heater('heat3', 'h1', 'h2', 350, 50);
 
 			HVAC.SPSTSwitch('spst1', 'sc1', 'sc2', 120, 120, 'noswitch');
@@ -61,7 +61,7 @@
 				<h1>TRADE TRAINER</h1>
 				<h2>Learn to diagnose electrical circuits online.<!--It's simple, it's fun, and it's free.--></h2>
 			</div>
-			<a href='/classroom/#HVAC' id='signup_button'>Sign Up!</a>
+			<a href='/classroom/#0' id='signup_button'>Sign Up!</a>
 		</div>
 	</div>
 	<div id='wrapper'>
