css styling lesson card and chapter card

--- a/pages/hvac.html
+++ b/pages/hvac.html
@@ -20,6 +20,7 @@
 	<script src="/js/collections/lessoncollection.js"></script>
 	<script src="/js/views/chapterlistview.js"></script>
 	<script src="/js/views/chapterview.js"></script>
+	<script src="/js/views/chaptertitleview.js"></script>
 	<script src="/js/views/usercardview.js"></script>
 	<script src="/js/views/classview.js"></script>
 	<script src="/js/views/lessonlistview.js"></script>
@@ -34,18 +35,16 @@
 </head>
 <body>
 	<div id='header2'>
-
 		<div id='header_wrapper'>
 			<div class='fleft'>
 				<h1>TRADE TRAINER</h1>
-
 			</div>
 			<span class='fright'>LogOut</span>
 		</div>
 	</div>
-	<div id='wrapper'>
-	</div>
-	<div id='footer'>
-	</div>
+
+	<div id='title_wrapper'></div>
+	<div id='wrapper'></div>
+	<div id='footer'></div>
 </body>
 </html>
