--- a/slides/cl0_ch0_l0.html
+++ b/slides/cl0_ch0_l0.html
@@ -14,7 +14,7 @@
 			HVAC.Neutral('n1', 625, 40);
 
 			HVAC.SPSTSwitch('spst1', 'sc1', 'sc2', 120, 120, 'noswitch');
-			//HVAC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
+			HVAC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
 
 			HVAC.DrawWire('w1', 'blue', 3, [50, 40, 50, 120]);
 			HVAC.DrawWire('w2', 'blue', 3, [50, 120, 120, 120]);
