slide wrapper styling

--- a/pages/hvac.html
+++ b/pages/hvac.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>HVAC Game</title>
 	<link rel='stylesheet' href='/css/main.css'	/>
+	<link rel='stylesheet' href='/css/hvac.css'	/>
 	
 	<!-- load libraries -->
 	<script src="/libs/jquery.js"></script>
@@ -45,18 +46,30 @@
 			var direction = $(this).data('direction'); // get the direction to move the slide
 			console.log('slide-number' + slidesNumber);
 			if (direction === 'left' && TRADE.SlideIndex !== 0) {
+				$('.slide-active').removeClass('slide-active');
 				$('#level_container').html('');
 				TRADE.SlideIndex --; // decrease index by one
+				$('#slide_nav_' + TRADE.SlideIndex).addClass('slide-active');
 				console.log('slide-index' + TRADE.SlideIndex);
 				var template = $(slides[TRADE.SlideIndex]).html();
 				$("#slide_container").html(_.template(template));
 			}
 			if (direction === 'right' && TRADE.SlideIndex !== slidesNumber) {
 				$('#level_container').html('');
+				$('.slide-active').removeClass('slide-active')
 				TRADE.SlideIndex ++;
+				$('#slide_nav_' + TRADE.SlideIndex).addClass('slide-active');
 				console.log('slide-index' + TRADE.SlideIndex);
 				var template = $(slides[TRADE.SlideIndex]).html();
 				$("#slide_container").html(_.template(template));
+			}
+		}
+
+		function slideIndexNav () {
+			var slidesNumber = $('#slide_holder > .slide').length;
+			for (var i=0; i<slidesNumber; i++) {
+				$('#slide_index').append('<span id="slide_nav_' + i + '">' + (i + 1) + ' </span>');
+
 			}
 		}
 
