--- a/slides/cl0_ch0_l0.html
+++ b/slides/cl0_ch0_l0.html
@@ -1,6 +1,6 @@
 <div id='slide_holder'>
 	<script type="text/html" class='slide' id='slide1b'>
-		<p>This is slide 1b. </p>
+		<p>This is slide 1. </p>
 		<div class='test1'>
 			Hello World
 		</div>
@@ -26,7 +26,7 @@
 	</script>
 
 	<script type="text/html" class='slide' id='slide1'>
-		<p>This is slide 1. </p>
+		<p>This is slide 2. </p>
 		<% 
 			HVAC.Create(700, 350);
 			HVAC.Set('problem_1', 'switch');
@@ -51,6 +51,82 @@
 		
 	</script>
 
+	<script type="text/html" class='slide' id='slide1b'>
+		<p>This is slide 3. </p>
+		<div class='test1'>
+			Hello World
+		</div>
+		<%  HVAC.Create(700, 350);
+			HVAC.Set('problem_0', 'switch');
+			HVAC.Line1('line1', 50, 40);
 
+			HVAC.Contact('c2', 50, 120);
+			HVAC.Contact('c3', 625, 212);
+		
+			HVAC.Neutral('n1', 625, 40);
+
+			HVAC.SPSTSwitch('spst1', 'sc1', 'sc2', 120, 120, 'noswitch');
+			HVAC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
+
+			HVAC.DrawWire('w1', 'blue', 3, [50, 40, 50, 120]);
+			HVAC.DrawWire('w2', 'blue', 3, [50, 120, 120, 120]);
+			HVAC.DrawWire('w3', 'blue', 3, [160, 210, 290, 210]);
+			HVAC.DrawWire('w4', 'blue', 3, [360, 210, 625, 210]);
+			HVAC.DrawWire('w5', 'blue', 3, [625, 210, 625, 40]);
+			
+		%>
+	</script>
+
+	<script type="text/html" class='slide' id='slide1'>
+		<p>This is slide 4. </p>
+		<% 
+			HVAC.Create(700, 350);
+			HVAC.Set('problem_1', 'switch');
+			HVAC.Line1('line1', 50, 40);
+
+			HVAC.Contact('c2', 50, 120);
+			HVAC.Contact('c3', 625, 212);
+		
+			HVAC.Neutral('n1', 625, 40);
+
+			HVAC.SPSTSwitch('spst1', 'sc1', 'sc2', 120, 120, 'noswitch');
+			HVAC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
+
+			HVAC.DrawWire('w1', 'blue', 3, [50, 40, 50, 120]);
+			HVAC.DrawWire('w2', 'blue', 3, [50, 120, 120, 120]);
+			HVAC.DrawWire('w3', 'blue', 3, [160, 210, 290, 210]);
+			HVAC.DrawWire('w4', 'blue', 3, [360, 210, 625, 210]);
+			HVAC.DrawWire('w5', 'blue', 3, [625, 210, 625, 40]);
+
+
+		%>
+		
+	</script>
+
+	<script type="text/html" class='slide' id='slide1'>
+		<p>This is slide 5. </p>
+		<% 
+			HVAC.Create(700, 350);
+			HVAC.Set('problem_1', 'switch');
+			HVAC.Line1('line1', 50, 40);
+
+			HVAC.Contact('c2', 50, 120);
+			HVAC.Contact('c3', 625, 212);
+		
+			HVAC.Neutral('n1', 625, 40);
+
+			HVAC.SPSTSwitch('spst1', 'sc1', 'sc2', 120, 120, 'noswitch');
+			HVAC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
+
+			HVAC.DrawWire('w1', 'blue', 3, [50, 40, 50, 120]);
+			HVAC.DrawWire('w2', 'blue', 3, [50, 120, 120, 120]);
+			HVAC.DrawWire('w3', 'blue', 3, [160, 210, 290, 210]);
+			HVAC.DrawWire('w4', 'blue', 3, [360, 210, 625, 210]);
+			HVAC.DrawWire('w5', 'blue', 3, [625, 210, 625, 40]);
+
+
+		%>
+		
+	</script>
 
 </div>
