worked on refresh issues, diversified global variable

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 		<div id='header_wrapper'>
 			<div class='fleft'>
-				<h1>TRADE TRAINER</h1>
+				<a href="/classroom/#0"><h1>TRADE TRAINER</h1></a>
 				<h2>Learn to diagnose electrical circuits online.<!--It's simple, it's fun, and it's free.--></h2>
 			</div>
 			<a href='/classroom/#0' id='signup_button'>Sign Up!</a>
