moved hvac variable to TRADE.CIRC

--- a/slides/cl0_ch0_l0.html
+++ b/slides/cl0_ch0_l0.html
@@ -4,23 +4,23 @@
 		<div class='test1'>
 			Hello World
 		</div>
-		<%  HVAC.Create(700, 350);
-			HVAC.Set('problem_0', 'switch');
-			HVAC.Line1('line1', 50, 40);
+		<%  TRADE.CIRC.Create(700, 350);
+			TRADE.CIRC.Set('problem_0', 'switch');
+			TRADE.CIRC.Line1('line1', 50, 40);
 
-			HVAC.Contact('c2', 50, 120);
-			HVAC.Contact('c3', 625, 212);
+			TRADE.CIRC.Contact('c2', 50, 120);
+			TRADE.CIRC.Contact('c3', 625, 212);
 		
-			HVAC.Neutral('n1', 625, 40);
+			TRADE.CIRC.Neutral('n1', 625, 40);
 
-			HVAC.SPSTSwitch('spst1', 'sc1', 'sc2', 120, 120, 'noswitch');
-			HVAC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
+			TRADE.CIRC.SPSTSwitch('spst1', 'sc1', 'sc2', 120, 120, 'noswitch');
+			TRADE.CIRC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
 
-			HVAC.DrawWire('w1', 'blue', 3, [50, 40, 50, 120]);
-			HVAC.DrawWire('w2', 'blue', 3, [50, 120, 120, 120]);
-			HVAC.DrawWire('w3', 'blue', 3, [160, 210, 290, 210]);
-			HVAC.DrawWire('w4', 'blue', 3, [360, 210, 625, 210]);
-			HVAC.DrawWire('w5', 'blue', 3, [625, 210, 625, 40]);
+			TRADE.CIRC.DrawWire('w1', 'blue', 3, [50, 40, 50, 120]);
+			TRADE.CIRC.DrawWire('w2', 'blue', 3, [50, 120, 120, 120]);
+			TRADE.CIRC.DrawWire('w3', 'blue', 3, [160, 210, 290, 210]);
+			TRADE.CIRC.DrawWire('w4', 'blue', 3, [360, 210, 625, 210]);
+			TRADE.CIRC.DrawWire('w5', 'blue', 3, [625, 210, 625, 40]);
 			
 		%>
 	</script>
@@ -28,23 +28,23 @@
 	<script type="text/html" class='slide' id='slide1'>
 		<p>This is slide 2. </p>
 		<% 
-			HVAC.Create(700, 350);
-			HVAC.Set('problem_1', 'switch');
-			HVAC.Line1('line1', 50, 40);
+			TRADE.CIRC.Create(700, 350);
+			TRADE.CIRC.Set('problem_1', 'switch');
+			TRADE.CIRC.Line1('line1', 50, 40);
 
-			HVAC.Contact('c2', 50, 120);
-			HVAC.Contact('c3', 625, 212);
+			TRADE.CIRC.Contact('c2', 50, 120);
+			TRADE.CIRC.Contact('c3', 625, 212);
 		
-			HVAC.Neutral('n1', 625, 40);
+			TRADE.CIRC.Neutral('n1', 625, 40);
 
-			HVAC.SPSTSwitch('spst1', 'sc1', 'sc2', 120, 120, 'noswitch');
-			HVAC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
+			TRADE.CIRC.SPSTSwitch('spst1', 'sc1', 'sc2', 120, 120, 'noswitch');
+			TRADE.CIRC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
 
-			HVAC.DrawWire('w1', 'blue', 3, [50, 40, 50, 120]);
-			HVAC.DrawWire('w2', 'blue', 3, [50, 120, 120, 120]);
-			HVAC.DrawWire('w3', 'blue', 3, [160, 210, 290, 210]);
-			HVAC.DrawWire('w4', 'blue', 3, [360, 210, 625, 210]);
-			HVAC.DrawWire('w5', 'blue', 3, [625, 210, 625, 40]);
+			TRADE.CIRC.DrawWire('w1', 'blue', 3, [50, 40, 50, 120]);
+			TRADE.CIRC.DrawWire('w2', 'blue', 3, [50, 120, 120, 120]);
+			TRADE.CIRC.DrawWire('w3', 'blue', 3, [160, 210, 290, 210]);
+			TRADE.CIRC.DrawWire('w4', 'blue', 3, [360, 210, 625, 210]);
+			TRADE.CIRC.DrawWire('w5', 'blue', 3, [625, 210, 625, 40]);
 
 
 		%>
@@ -56,23 +56,23 @@
 		<div class='test1'>
 			Hello World
 		</div>
-		<%  HVAC.Create(700, 350);
-			HVAC.Set('problem_0', 'switch');
-			HVAC.Line1('line1', 50, 40);
+		<%  TRADE.CIRC.Create(700, 350);
+			TRADE.CIRC.Set('problem_0', 'switch');
+			TRADE.CIRC.Line1('line1', 50, 40);
 
-			HVAC.Contact('c2', 50, 120);
-			HVAC.Contact('c3', 625, 212);
+			TRADE.CIRC.Contact('c2', 50, 120);
+			TRADE.CIRC.Contact('c3', 625, 212);
 		
-			HVAC.Neutral('n1', 625, 40);
+			TRADE.CIRC.Neutral('n1', 625, 40);
 
-			HVAC.SPSTSwitch('spst1', 'sc1', 'sc2', 120, 120, 'noswitch');
-			HVAC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
+			TRADE.CIRC.SPSTSwitch('spst1', 'sc1', 'sc2', 120, 120, 'noswitch');
+			TRADE.CIRC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
 
-			HVAC.DrawWire('w1', 'blue', 3, [50, 40, 50, 120]);
-			HVAC.DrawWire('w2', 'blue', 3, [50, 120, 120, 120]);
-			HVAC.DrawWire('w3', 'blue', 3, [160, 210, 290, 210]);
-			HVAC.DrawWire('w4', 'blue', 3, [360, 210, 625, 210]);
-			HVAC.DrawWire('w5', 'blue', 3, [625, 210, 625, 40]);
+			TRADE.CIRC.DrawWire('w1', 'blue', 3, [50, 40, 50, 120]);
+			TRADE.CIRC.DrawWire('w2', 'blue', 3, [50, 120, 120, 120]);
+			TRADE.CIRC.DrawWire('w3', 'blue', 3, [160, 210, 290, 210]);
+			TRADE.CIRC.DrawWire('w4', 'blue', 3, [360, 210, 625, 210]);
+			TRADE.CIRC.DrawWire('w5', 'blue', 3, [625, 210, 625, 40]);
 			
 		%>
 	</script>
