--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		
 		<script src='scripts/functions.js'></script>
 	-->
-		<script src='js/main.js'></script>
+	<script src='js/main.js'></script>
 	<script src="libs/jquery.js"></script>
 	<script src="libs/kinetic.js"></script>
 	<script src="libs/underscore.js"></script>
@@ -27,8 +27,10 @@
 	<script>
 
 		$(document).ready(function(){
+
 			TRADE.CIRC.Create(700, 350);
 			TRADE.CIRC.Set('problem_01', 'switch');
+			TRADE.CIRC.SPSTSwitch('spst1', 's0', 's2', 30, 10, 'noswitch');
 			TRADE.CIRC.Fan('fan1', 'f1', 'f2', 'f3', '150', '50');
 
 		});
