breaker logic and cleaned up spstswith

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
 			TRADE.CIRC.Create(700, 350);
 			TRADE.CIRC.Set('problem_01', 'switch');
-			//TRADE.CIRC.SPSTSwitch('spst1', 's0', 's2', 30, 10, 'noswitch');
-			//TRADE.CIRC.Fan('fan1', 'f1', 'f2', 'f3', '150', '50');
-			TRADE.CIRC.Breaker('break1', 'b1', 'b2', 'b3', 'b4', 10, 10, 'breaker');
+			TRADE.CIRC.SPSTSwitch('spst1', 's0', 's1', 30, 10, 'noswitch');
+			TRADE.CIRC.Fan('fan1', 'f1', 'f2', 'f3', '150', '50');
+			//TRADE.CIRC.Breaker('break1', 'b1', 'b2', 'b3', 'b4', 10, 10, 'noswitch');
 
 		});
 
