--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 
 			TRADE.CIRC.Create(700, 350);
 			TRADE.CIRC.Set('problem_01', 'switch');
-			TRADE.CIRC.SPSTSwitch('spst1', 's0', 's1', 30, 10, 'noswitch');
-			TRADE.CIRC.Fan('fan1', 'f1', 'f2', 'f3', '150', '50');
-			//TRADE.CIRC.Breaker('break1', 'b1', 'b2', 'b3', 'b4', 10, 10, 'noswitch');
+			//TRADE.CIRC.SPSTSwitch('spst1', 's0', 's1', 30, 10, 'noswitch');
+			//TRADE.CIRC.Fan('fan1', 150, 50, 'f1', 'f2', 'f3');
+			TRADE.CIRC.Breaker('break1', 10, 10, 'b1', 'b2', 'b3', 'b4', 'noswitch');
+			TRADE.CIRC.StatStrip5('stat1', 120, 10, 'q1', 'q2', 'q3', 'q4', 'q5');
 
 		});
 
