--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			TRADE.CIRC.Breaker('break1', 10, 10, 'b1', 'b2', 'b3', 'b4', 'noswitch');
 			TRADE.CIRC.StatStrip5('stat1', 120, 10, 'q1', 'q2', 'q3', 'q4', 'q5');
 			TRADE.CIRC.Capacitor('cap1', 200, 40, 'e1', 'e2', '30');
+			TRADE.CIRC.AddThermostat();
 		});
 
 	</script>
