--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 		$(document).ready(function(){
 
 			TRADE.CIRC.Create(700, 350);
-			TRADE.CIRC.Set('problem_01', 'switch');
+			TRADE.CIRC.Set('problem_01', 'Heat');
 			//TRADE.CIRC.SPSTSwitch('spst1', 's0', 's1', 30, 10, 'noswitch');
 			//TRADE.CIRC.Fan('fan1', 150, 50, 'f1', 'f2', 'f3');
-			TRADE.CIRC.Breaker('break1', 10, 10, 'b1', 'b2', 'b3', 'b4', 'noswitch');
-			TRADE.CIRC.StatStrip5('stat1', 120, 10, 'q1', 'q2', 'q3', 'q4', 'q5');
-			TRADE.CIRC.Capacitor('cap1', 200, 40, 'e1', 'e2', '30');
-			TRADE.CIRC.AddThermostat();
+			TRADE.CIRC.AddBreaker('break1', 10, 10, 'b1', 'b2', 'b3', 'b4', 'noswitch');
+			//TRADE.CIRC.StatStrip5('stat1', 120, 10, 'q1', 'q2', 'q3', 'q4', 'q5');
+			//TRADE.CIRC.Capacitor('cap1', 200, 40, 'e1', 'e2', '30');
+			TRADE.CIRC.AddThermostat('Heat');
 		});
 
 	</script>
