added problem template, fixed lesson refresh issues

--- a/slides/cl0_ch0_l0.html
+++ b/slides/cl0_ch0_l0.html
@@ -13,8 +13,8 @@
 		
 			TRADE.CIRC.Neutral('n1', 625, 40);
 
-			TRADE.CIRC.SPSTSwitch('spst1', 'sc1', 'sc2', 120, 120, 'noswitch');
-			TRADE.CIRC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
+			//TRADE.CIRC.SPSTSwitch('spst1', 'sc1', 'sc2', 120, 120, 'noswitch');
+			//TRADE.CIRC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
 
 			TRADE.CIRC.DrawWire('w1', 'blue', 3, [50, 40, 50, 120]);
 			TRADE.CIRC.DrawWire('w2', 'blue', 3, [50, 120, 120, 120]);
