added views to create answer box

--- a/pages/hvac.html
+++ b/pages/hvac.html
@@ -17,8 +17,14 @@
 	<script src="/js/models/classmodel.js"></script>
 	<script src="/js/models/usermodel.js"></script>
 	<script src="/js/models/lessonmodel.js"></script>
+	<script src="/js/models/answermodel.js"></script>
 	<script src="/js/collections/chaptercollection.js"></script>
 	<script src="/js/collections/lessoncollection.js"></script>
+	<script src="/js/collections/answercollection.js"></script>
+	<script src="/js/views/answersublistview.js"></script>
+	<script src="/js/views/answerlistview.js"></script>
+	<script src="/js/views/answerview.js"></script>
+	<script src="/js/views/answersubview.js"></script>
 	<script src="/js/views/chapterlistview.js"></script>
 	<script src="/js/views/chapterview.js"></script>
 	<script src="/js/views/chaptertitleview.js"></script>
