--- a/slides/cl0_ch0_l1.html
+++ b/slides/cl0_ch0_l1.html
@@ -25,6 +25,17 @@
 		<div class='test1'>
 			Hello problem
 		</div>
+		<%
+			TRADE.CIRC.Create(700, 850);
+
+
+		%>
+
+
+
+
+
+
 		<% TRADE.GameData.answer = '0'; %>
 
 	</script>
@@ -54,8 +65,8 @@
 		
 			TRADE.CIRC.Neutral('n1', 625, 40);
 
-			TRADE.CIRC.SPSTSwitch('spst1', 120, 120, 'sc1', 'sc2', 'noswitch');
-			TRADE.CIRC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
+			//TRADE.CIRC.SPSTSwitch('spst1', 120, 120, 'sc1', 'sc2', 'noswitch');
+			//TRADE.CIRC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
 
 			TRADE.CIRC.DrawWire('w1', 'blue', 3, [50, 40, 50, 120]);
 			TRADE.CIRC.DrawWire('w2', 'blue', 3, [50, 120, 120, 120]);
@@ -69,54 +80,14 @@
 
 	<script type="text/html" class='slide' id='slide1'>
 		<p>This is slide 4. </p>
-		<% 
-			HVAC.Create(700, 350);
-			HVAC.Set('problem_1', 'switch');
-			HVAC.Line1('line1', 50, 40);
-
-			HVAC.Contact('c2', 50, 120);
-			HVAC.Contact('c3', 625, 212);
-		
-			HVAC.Neutral('n1', 625, 40);
-
-			HVAC.SPSTSwitch('spst1', 'sc1', 'sc2', 120, 120, 'noswitch');
-			HVAC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
-
-			HVAC.DrawWire('w1', 'blue', 3, [50, 40, 50, 120]);
-			HVAC.DrawWire('w2', 'blue', 3, [50, 120, 120, 120]);
-			HVAC.DrawWire('w3', 'blue', 3, [160, 210, 290, 210]);
-			HVAC.DrawWire('w4', 'blue', 3, [360, 210, 625, 210]);
-			HVAC.DrawWire('w5', 'blue', 3, [625, 210, 625, 40]);
-
-
-		%>
+		<% TRADE.GameData.answer = '3'; %>
 		
 	</script>
 
 	<script type="text/html" class='slide' id='slide1'>
 		<p>This is slide 5. </p>
-		<% 
-			HVAC.Create(700, 350);
-			HVAC.Set('problem_1', 'switch');
-			HVAC.Line1('line1', 50, 40);
 
-			HVAC.Contact('c2', 50, 120);
-			HVAC.Contact('c3', 625, 212);
-		
-			HVAC.Neutral('n1', 625, 40);
-
-			HVAC.SPSTSwitch('spst1', 'sc1', 'sc2', 120, 120, 'noswitch');
-			HVAC.LightBulb('l1', 'lc1', 'lc2', 290, 60);
-
-			HVAC.DrawWire('w1', 'blue', 3, [50, 40, 50, 120]);
-			HVAC.DrawWire('w2', 'blue', 3, [50, 120, 120, 120]);
-			HVAC.DrawWire('w3', 'blue', 3, [160, 210, 290, 210]);
-			HVAC.DrawWire('w4', 'blue', 3, [360, 210, 625, 210]);
-			HVAC.DrawWire('w5', 'blue', 3, [625, 210, 625, 40]);
-
-
-		%>
-		
+		<% TRADE.GameData.answer = '5'; %>
 	</script>
 
 </div>
