began work on implementing local user auth, cleaned up node files

--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
 				<a href="/classroom/#0"><h1>TRADE TRAINER</h1></a>
 				<h2>Learn to diagnose electrical circuits online.<!--It's simple, it's fun, and it's free.--></h2>
 			</div>
+			<form action="/login" method="post">
+			    <div>
+			        <label>Username:</label>
+			        <input type="text" name="username"/>
+			    </div>
+			    <div>
+			        <label>Password:</label>
+			        <input type="password" name="password"/>
+			    </div>
+			    <div>
+			        <input type="submit" value="Log In"/>
+			    </div>
+			</form>
 			<a href='/classroom/#0' id='signup_button'>Sign Up!</a>
 		</div>
 	</div>
