added logout feature, created auth.js, added methoed to user schema

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 			</div>
 			<form action="/login" method="post">
 			    <div>
-			        <label>Username:</label>
-			        <input type="text" name="username"/>
+			        <label>email:</label>
+			        <input type="text" name="email"/>
 			    </div>
 			    <div>
 			        <label>Password:</label>
