--- a/pages/hvac.html
+++ b/pages/hvac.html
@@ -56,7 +56,7 @@
 			<div class='fleft'>
 				<a href='/classroom/#0'><h1>TRADE TRAINER</h1></a>
 			</div>
-			<span class='fright'>LogOut</span>
+			<a href='/logout'><span class='fright'>LogOut</span></a>
 		</div>
 	</div>
 
