sign up now working

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,19 @@
 						
 				</form>
 			</div>
+			<div id='sign_up_form' class='hidden'>
+				<div id='shadow'></div>
+				<div id='sign_up_container'>
+					<h1>Sign Up!</h1>
+					<form id='signup' method="post" action="/signup">
+						<label>email:</label>
+				        <input type="text" name="email"/>   	
+				        <label>Password:</label>
+				        <input type="password" name="password"/>
+				        <input type="submit" value="Sign up"/>
+					</form>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div id='wrapper'>
