cleaned up sign up

--- a/public/index.html
+++ b/public/index.html
@@ -57,11 +57,15 @@
 				<div id='sign_up_container'>
 					<h1>Sign Up!</h1>
 					<form id='signup' method="post" action="/signup">
-						<label>email:</label>
-				        <input type="text" name="email"/>   	
-				        <label>Password:</label>
-				        <input type="password" name="password"/>
-				        <input type="submit" value="Sign up"/>
+						<div class='fright'>
+							<label>email:</label>
+					        <input type="text" name="email"/>
+					        <br> 	
+					        <label>Password:</label>
+					        <input type="password" name="password"/>
+					        <br>
+					        <input type="submit" value="Sign up"/>
+					    </div>
 					</form>
 				</div>
 			</div>
