css styling of index page

--- a/public/index.html
+++ b/public/index.html
@@ -33,13 +33,14 @@
 
 		<div id='header_wrapper'>
 			<div class='fleft'>
-				<a href="/classroom/#0"><h1>TRADE TRAINER</h1></a>
-				<h2>Learn to diagnose electrical circuits online.<!--It's simple, it's fun, and it's free.--></h2>
+				<a href="/classroom/#0"><h1>TradePro</h1></a>
+				<h2>Learn to diagnose electrical circuits online.</h2>
 			</div>
 			<div id='sign_in'>Sign In</div>
 			<div id='sign_up'>Sign Up</div>
 			<div id='sign_in_form' class='hidden'>
 				<form action="/login" method="post">
+
 						<div class='fright'>
 					        <label>email:</label>
 					        <input type="text" name="email"/>   	
@@ -55,11 +56,14 @@
 			<div id='sign_up_form' class='hidden'>
 				<div id='shadow'></div>
 				<div id='sign_up_container'>
-					<h1>Sign Up!</h1>
+					<div id='signup_header'><h1>Sign Up!</h1></div>
+					
 					<form id='signup' method="post" action="/signup">
 						<div class='fright'>
 							<label>email:</label>
 					        <input type="text" name="email"/>
+					    </div>
+					    <div class='fright'>
 					        <br> 	
 					        <label>Password:</label>
 					        <input type="password" name="password"/>
@@ -71,8 +75,25 @@
 			</div>
 		</div>
 	</div>
-	<div id='wrapper'>
+	<div class='wrapper'>
 		<div id='level_container'>
+		</div>
+	</div>
+	<div id='mid_wrapper'>
+		<div class='wrapper'>
+			<div class='column_3'>
+				<h3>Track Employee's Growth</h3>
+				<p>Monitor employee performance as they grow. Gain insightful statistics into their ability to solve technical problems.</p>
+			</div>
+			<div class='column_3 light-blue'>
+				<h3>Learn on the Latest Systems</h3>
+				<p>We allow students to train on the latest systems available.</p>
+			</div>
+			<div class='column_3'>
+				<h3>Cover Airflow, System Design, and Circuitry</h3>
+				<p>It's not just electric. We cover all facets of a proper HVAC education</p>
+			</div>
+			<div class='clear'></div>
 		</div>
 	</div>
 	<div id='footer'>
