--- a/public/pages/hvac.html
+++ b/public/pages/hvac.html
@@ -56,12 +56,12 @@
 			<div class='fleft'>
 				<a href='/classroom/#0'><h1>TRADE TRAINER</h1></a>
 			</div>
-			<a href='/logout'><span class='fright'>LogOut</span></a>
+			<a href='/logout'><span id='logout' class='fright'>LogOut</span></a>
 		</div>
 	</div>
 
 	<div id='title_wrapper'></div>
-	<div id='wrapper'></div>
+	<div class='wrapper'></div>
 	<div id='footer'></div>
 </body>
 </html>
