--- a/public/index.html
+++ b/public/index.html
@@ -34,10 +34,10 @@
 		<div id='header_wrapper'>
 			<div class='fleft'>
 				<a href="/classroom/#0"><h1>TradePro</h1></a>
-				<h2>Learn to diagnose electrical circuits online.</h2>
+				
 			</div>
 			<div id='sign_in'>Sign In</div>
-			<div id='sign_up'>Sign Up</div>
+			
 			<div id='sign_in_form' class='hidden'>
 				<form action="/login" method="post">
 
@@ -76,18 +76,22 @@
 		</div>
 	</div>
 	<div class='wrapper'>
+		<h2 class='tagline fleft'>Learn to diagnose electrical circuits online.</h2>
+		<div id='sign_up'>Enroll Today!</div>
+		<div class='clear'></div>
 		<div id='level_container'>
 		</div>
 	</div>
 	<div id='mid_wrapper'>
 		<div class='wrapper'>
 			<div class='column_3'>
-				<h3>Track Employee's Growth</h3>
-				<p>Monitor employee performance as they grow. Gain insightful statistics into their ability to solve technical problems.</p>
-			</div>
-			<div class='column_3 light-blue'>
 				<h3>Learn on the Latest Systems</h3>
 				<p>We allow students to train on the latest systems available.</p>
+			</div>
+			<div class='column_3 light-blue'>
+				<h3>Track Employee's Growth</h3>
+				<p>Monitor employee performance as they grow. Gain insightful statistics into their ability to solve technical problems.</p>
+				<div class='arrow-down'></div>
 			</div>
 			<div class='column_3'>
 				<h3>Cover Airflow, System Design, and Circuitry</h3>
