--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,12 @@
 				<a href="/classroom/#0"><h1>TradePro</h1></a>
 				
 			</div>
-			<div id='sign_in'>Sign In</div>
 			
-			<div id='sign_in_form' class='hidden'>
-				<form action="/login" method="post">
-
-						<div class='fright'>
+			
+			<div>
+				<form id='sign_in_form' action="/login" method="post">
+						<div id='sign_in'>Sign In</div>
+						<div id='sign_in_inputs' class='fright hidden'>
 					        <label>email:</label>
 					        <input type="text" name="email"/>   	
 					        <label>Password:</label>
@@ -49,7 +49,6 @@
 				    	</div>
 
 				        <br>
-				        <input type="submit" value="Log In"/>
 						
 				</form>
 			</div>
