signigicant redesign of backbone and node routers

--- a/slides/cl0_ch0_l1.html
+++ b/slides/cl0_ch0_l1.html
@@ -27,7 +27,7 @@
 		</div>
 		<%
 			TRADE.CIRC.Create(720, 850);
-			TRADE.CIRC.Set('problem_01', 'Heat');
+			// TRADE.CIRC.Set('problem_01', 'Heat');
 			//TRADE.CIRC.SPSTSwitch('spst1', 's0', 's1', 30, 10, 'noswitch');
 			//TRADE.CIRC.Fan('fan1', 150, 50, 'f1', 'f2', 'f3');
 			TRADE.CIRC.AddBreaker('break1', 35, 20, 'b1', 'b2', 'b3', 'b4', 'noswitch');
