--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 <body>
 	<div id='header'>
 
-		<div id='header_wrapper'>
+		<div id='header_wrapper' class='wrapper'>
 			<div class='fleft'>
 				<a href="/classroom/#0"><h1>TradePro</h1></a>
 				
