small header css

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 <body>
 	<div id='header'>
 
-		<div id='header_wrapper' class='wrapper'>
+		<div class='wrapper'>
 			<div class='fleft'>
 				<a href="/classroom/#0"><h1>TradePro</h1></a>
 				
@@ -74,7 +74,7 @@
 			</div>
 		</div>
 	</div>
-	<div class='wrapper'>
+	<div id='main_wrapper' class='wrapper'>
 		<h2 class='tagline fleft'>Learn to diagnose electrical circuits online.</h2>
 		<div id='sign_up'>Enroll Today!</div>
 		<div class='clear'></div>
