major navigation redesign. flattened structure

--- a/public/pages/classroom.html
+++ b/public/pages/classroom.html
@@ -54,6 +54,7 @@
 	</script>
 </head>
 <body>
+
 	<div id='header'>
 		<div id='header_wrapper' class='wrapper'>
 			<div class='fleft'>
@@ -62,9 +63,22 @@
 			<a href='/logout'><span id='logout' class='fright'>LogOut</span></a>
 		</div>
 	</div>
-
-	<div id='title_wrapper'></div>
+	<div id='page_wrapper' class='wrapper'>
+		<div id='subnav_container'>
+			<ul>
+				<li>Dashboard</li>
+				<li>Classes</li>
+				<li>Problems</li>
+				<li>Report Card</li>
+			</ul>
+		</div>
+		<div id='body_container'>
+			
+		</div>
+	</div>
 	<div id='main_wrapper' class='wrapper'></div>
+	<div id='title_wrapper'></div>
+	
 	<div id='footer'></div>
 </body>
 </html>
