got slide routing working again:

--- a/public/pages/classroom.html
+++ b/public/pages/classroom.html
@@ -72,9 +72,8 @@
 				<li>Report Card</li>
 			</ul>
 		</div>
-		<div id='body_container'>
-			
-		</div>
+		<div id='body_container'></div>
+		<div id='lesson_container'></div>
 	</div>
 	<div id='main_wrapper' class='wrapper'></div>
 	<div id='title_wrapper'></div>
