--- a/public/pages/classroom.html
+++ b/public/pages/classroom.html
@@ -67,9 +67,9 @@
 		<div id='subnav_container'>
 			<ul>
 				<li>Dashboard</li>
-				<li>Classes</li>
+				<a href='#'><li>Classes</li></a>
 				<li>Problems</li>
-				<li>Report Card</li>
+				<a href='#/report'><li>Report Card</li></a>
 			</ul>
 		</div>
 		<div id='body_container'></div>
