--- a/public/index.html
+++ b/public/index.html
@@ -74,31 +74,42 @@
 			</div>
 		</div>
 	</div>
-	<div id='main_wrapper' class='wrapper'>
-		<h2 class='tagline fleft'>Learn to diagnose electrical circuits online.</h2>
-		<div id='sign_up'>Enroll Today!</div>
-		<div class='clear'></div>
-		<div id='level_container'>
+	<div id='main_wrapper' class='margin-top20'>
+		<div class='wrapper'>
+			<h2 class='tagline fleft'>Learn to diagnose electrical circuits online.</h2>
+			<div id='sign_up'>Enroll Today!</div>
+			<div class='clear'></div>
+			<div id='level_container'></div>
 		</div>
 	</div>
-	<div id='mid_wrapper'>
+	<div id='mid_wrapper' class='margin-top'>
 		<div class='wrapper'>
 			<div class='column_3'>
 				<h3>Learn on the Latest Systems</h3>
-				<p>We allow students to train on the latest systems available.</p>
+				<br>
+				<p>We allow students to train on the latest systems available</p>
+				<p>Practice on systems modeled after real furnaces</p>
 			</div>
 			<div class='column_3 light-blue'>
 				<h3>Track Employee's Growth</h3>
-				<p>Monitor employee performance as they grow. Gain insightful statistics into their ability to solve technical problems.</p>
+				<br>
+				<p>Monitor employee performance</p>
+				<p>Gain insightful statistics into their strengths and weaknesses</p>
+				<p>Assess technical abilities of employees</p>
 				<div class='arrow-down'></div>
 			</div>
 			<div class='column_3'>
-				<h3>Cover Airflow, System Design, and Circuitry</h3>
+				<h3>A Rounded Education</h3>
+				<br>
 				<p>It's not just electric. We cover all facets of a proper HVAC education</p>
+				<p>Learn airflow, refrigeration, and much more!</p>
 			</div>
 			<div class='clear'></div>
 		</div>
 	</div>
+	<div id='bottom_wrapper'>
+
+	<div>
 	<div id='footer'>
 	</div>
 </body>
