added user post route, update user still fails

--- a/slides/cl0_ch0_l0.html
+++ b/slides/cl0_ch0_l0.html
@@ -46,7 +46,7 @@
 	</script>
 
 	<script type="text/html" class='slide' id='slide1'>
-		<p>This is slide 5. </p>
+		<b><div class='finish'>Click here to finish slide deck</div></b>
 
 	</script>
 
