report user changes

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,14 @@
 					
 					<form id='signup' method="post" action="/signup">
 						<div class='fright'>
+							<label>First Name:</label>
+					        <input type="text" name="firstName"/>
+					    </div>
+					    <div class='fright'>
+							<label>Last Name:</label>
+					        <input type="text" name="lastName"/>
+					    </div>
+					    <div class='fright'>
 							<label>email:</label>
 					        <input type="text" name="email"/>
 					    </div>
