--- a/public/pages/classroom.html
+++ b/public/pages/classroom.html
@@ -75,8 +75,8 @@
 		<div id='body_container'></div>
 		<div id='lesson_container'></div>
 	</div>
-	<div id='main_wrapper' class='wrapper'></div>
-	<div id='title_wrapper'></div>
+<!-- 	<div id='main_wrapper' class='wrapper'></div>
+	<div id='title_wrapper'></div> -->
 	
 	<div id='footer'></div>
 </body>
