problem nav now working

--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,9 @@
 						<div id='sign_in'>Sign In</div>
 						<div id='sign_in_inputs' class='fright hidden'>
 					        <label>email:</label>
-					        <input type="text" name="email"/>   	
+					        <input type="text" name="email" value="mbahoshy@gmail.com" />   	
 					        <label>Password:</label>
-					        <input type="password" name="password"/>
+					        <input type="password" name="password" value="ross"/>
 				    	</div>
 
 				        <br>
