--- a/public/pages/classroom.html
+++ b/public/pages/classroom.html
@@ -18,13 +18,18 @@
 	<script src="/js/models/usermodel.js"></script>
 	<script src="/js/models/lessonmodel.js"></script>
 	<script src="/js/models/answermodel.js"></script>
+	<script src="/js/models/problemmodel.js"></script>
 	<script src="/js/collections/chaptercollection.js"></script>
 	<script src="/js/collections/lessoncollection.js"></script>
 	<script src="/js/collections/answercollection.js"></script>
 	<script src="/js/collections/classcollection.js"></script>
+	<script src="/js/collections/problemcollection.js"></script>
 	<script src="/js/views/classcollectionview.js"></script>
 	
 	<script src="/js/views/answersublistview.js"></script>
+	<script src="/js/views/problemview.js"></script>
+	<script src="/js/views/problemlistview.js"></script>
+	
 	<script src="/js/views/answerlistview.js"></script>
 	<script src="/js/views/answerview.js"></script>
 	<script src="/js/views/answersubview.js"></script>
@@ -34,7 +39,7 @@
 	<script src="/js/views/usercardview.js"></script>
 	<script src="/js/views/userchapterview.js"></script>
 	<script src="/js/views/classview.js"></script>
-	<script src="/js/views/lessonlistview.js"></script>
+	<!-- <script src="/js/views/lessonlistview.js"></script> -->
 	<script src="/js/views/lessonview.js"></script>
 
 
@@ -68,7 +73,8 @@
 			<ul>
 				<li>Dashboard</li>
 				<a href='#'><li>Classes</li></a>
-				<li>Problems</li>
+				<a href='#/problems'><li>Problems</li></a>
+				<a href='#/equipment'><li>Equipment</li></a>
 				<a href='#/report'><li>Report Card</li></a>
 			</ul>
 		</div>
