--- a/public/pages/classroom.html
+++ b/public/pages/classroom.html
@@ -73,7 +73,7 @@
 			<ul>
 				<li>Dashboard</li>
 				<a href='#'><li>Classes</li></a>
-				<a href='#/problems'><li>Problems</li></a>
+				<a href='#/problems/Rookie'><li>Problems</li></a>
 				<a href='#/equipment'><li>Equipment</li></a>
 				<a href='#/report'><li>Report Card</li></a>
 			</ul>
