--- a/public/pages/classroom.html
+++ b/public/pages/classroom.html
@@ -62,22 +62,24 @@
 
 	<div id='header'>
 		<div id='header_wrapper' class='wrapper'>
-			<div class='fleft'>
-				<a href='#'><h1>TradePro</h1></a>
+			<div class='relative'>
+				<div class='fleft'>
+					<a href='#'><h1>TradePro</h1></a>
+				</div>
+				<div id='subnav_container'>
+					<ul>
+						<li>Dashboard</li>
+						<a href='#'><li>Classes</li></a>
+						<a href='#/problems/Rookie'><li>Problems</li></a>
+						<a href='#/equipment'><li>Equipment</li></a>
+						<a href='#/report'><li>Report Card</li></a>
+					</ul>
+				</div>
+				<a href='/logout'><div id='logout' class='fright'>LogOut</div></a>
 			</div>
-			<a href='/logout'><span id='logout' class='fright'>LogOut</span></a>
 		</div>
 	</div>
 	<div id='page_wrapper' class='wrapper'>
-		<div id='subnav_container'>
-			<ul>
-				<li>Dashboard</li>
-				<a href='#'><li>Classes</li></a>
-				<a href='#/problems/Rookie'><li>Problems</li></a>
-				<a href='#/equipment'><li>Equipment</li></a>
-				<a href='#/report'><li>Report Card</li></a>
-			</ul>
-		</div>
 		<div id='body_container'></div>
 		<div id='lesson_container'></div>
 	</div>
