major css changes to lesson page

--- a/public/pages/classroom.html
+++ b/public/pages/classroom.html
@@ -35,7 +35,7 @@
 	<script src="/js/views/answersubview.js"></script>
 	<script src="/js/views/chapterlistview.js"></script>
 	<script src="/js/views/chapterview.js"></script>
-	<script src="/js/views/chaptertitleview.js"></script>
+	<!--<script src="/js/views/chaptertitleview.js"></script>-->
 	<script src="/js/views/usercardview.js"></script>
 	<script src="/js/views/userchapterview.js"></script>
 	<script src="/js/views/classview.js"></script>
