--- a/public/pages/classroom.html
+++ b/public/pages/classroom.html
@@ -70,7 +70,7 @@
 					<ul>
 						<li>Dashboard</li>
 						<a href='#'><li>Classes</li></a>
-						<a href='#/problems/Rookie'><li>Problems</li></a>
+						<a href='#/problems/52a7920eea1d6fce2f0001b6'><li>Problems</li></a>
 						<a href='#/equipment'><li>Equipment</li></a>
 						<a href='#/report'><li>Report Card</li></a>
 					</ul>
