--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,9 @@
 			
 			<div>
 				<form id='sign_in_form' action="/login" method="post">
-						<div id='sign_in'>Sign In</div>
+						<div id='sign_in'><input id='submit_button' type='submit' value='Sign In'/></div>
 						<div id='sign_in_inputs' class='fright hidden'>
-					        <label>email:</label>
+					        <label>Email:</label>
 					        <input type="text" name="email" value="mbahoshy@gmail.com" />   	
 					        <label>Password:</label>
 					        <input type="password" name="password" value="ross"/>
