--- a/slides/cl0_ch2_l1.html
+++ b/slides/cl0_ch2_l1.html
@@ -46,7 +46,7 @@
 	</script>
 
 	<script type="text/html" class='slide' id='slide1'>
-		<b><div class='finish'>Click here to finish slide deck</div></b>
+		<p>This is slide 5. </p>
 
 	</script>
 
