added problems and lessons index page styling

--- a/public/index.html
+++ b/public/index.html
@@ -59,22 +59,27 @@
 					
 					<form id='signup' method="post" action="/signup">
 						<div class='fright'>
+							<br>
 							<label>First Name:</label>
 					        <input type="text" name="firstName"/>
+					        <br>
 					    </div>
-					    <div class='fright'>
+					    <div class='fright clear'>
 							<label>Last Name:</label>
 					        <input type="text" name="lastName"/>
+					        <br>
 					    </div>
-					    <div class='fright'>
-							<label>email:</label>
+					    <div class='fright clear'>
+							<label>Email:</label>
 					        <input type="text" name="email"/>
+					        <br>
 					    </div>
-					    <div class='fright'>
-					        <br> 	
+					    <div class='fright clear'>
 					        <label>Password:</label>
 					        <input type="password" name="password"/>
 					        <br>
+					    </div>
+					    <div class='fright clear'>
 					        <input type="submit" value="Sign up"/>
 					    </div>
 					</form>
